# mbase_nlquery

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  db_ops.h  global_state.h  global_state.h.in  main.cpp  model_proc_cl.h  mysql_get_tables.txt  nlq_status.h  postgre_get_tables.txt  prompt_cooker.cpp  sys_prompt_structure.txt  text.txt
analysis_tables/: mac_mini_benchmark.numbers  no_previous_context.numbers  with_previous_context.numbers
static/: index.html
sys_prompts/: sys_prompt_data_after.txt  sys_prompt_data_before.txt  sys_prompt_db_describe.txt
web/: index.html
